/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package flyBehavior;

/**
 *
 * @author estudiantes
 */
public class FlyWithWings  implements FlyBehavior {

    @Override
    public void fly() {
        System.out.println("Flying with a wings");
    }
    
}
